; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_messages.c_vlc_LogPreinit.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_messages.c_vlc_LogPreinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32* }
%struct.vlc_logger = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_LogPreinit(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.vlc_logger*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %6 = call i32* (...) @vlc_LogSwitchCreate()
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i64 @unlikely(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %30

13:                                               ; preds = %1
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  store i32* %14, i32** %17, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = call %struct.vlc_logger* @vlc_LogEarlyOpen(i32* %18)
  store %struct.vlc_logger* %19, %struct.vlc_logger** %5, align 8
  %20 = load %struct.vlc_logger*, %struct.vlc_logger** %5, align 8
  %21 = icmp ne %struct.vlc_logger* %20, null
  br i1 %21, label %22, label %29

22:                                               ; preds = %13
  %23 = load i32*, i32** %4, align 8
  %24 = load %struct.vlc_logger*, %struct.vlc_logger** %5, align 8
  %25 = call i32 @vlc_LogSwitch(i32* %23, %struct.vlc_logger* %24)
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %27 = call i32 @VLC_OBJECT(%struct.TYPE_6__* %26)
  %28 = call i32 @vlc_LogSpam(i32 %27)
  br label %29

29:                                               ; preds = %22, %13
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %12
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32* @vlc_LogSwitchCreate(...) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local %struct.vlc_logger* @vlc_LogEarlyOpen(i32*) #1

declare dso_local i32 @vlc_LogSwitch(i32*, %struct.vlc_logger*) #1

declare dso_local i32 @vlc_LogSpam(i32) #1

declare dso_local i32 @VLC_OBJECT(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
